--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bilibili-danmaku-page",
+  "name": "@tokine/bilibili-danmaku-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
