--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tokine/bilibili-danmaku-page",
   "version": "0.1.0",
-  "private": true,
+  "author": "其妙 <hling51325@163.com>",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
