--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "release": "cp package.json dist && cd dist && npm publish"
   },
   "dependencies": {
     "axios": "^0.21.1",
