--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tokine/bilibili-danmaku-page",
-  "version": "0.1.4-beta.0",
+  "version": "0.1.4",
   "author": "其妙 <hling51325@163.com>",
   "license": "MIT",
   "scripts": {
